@@ -1,3 +1,7 @@
+2001-01-09  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.old_deja/g++.pt/using8.C: New test.
+
 2001-01-09  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* gcc.dg/format/attr-2.c, gcc.dg/format/attr-3.c: New tests.
